Update NN from scratch.ipynb

--- a/NN from scratch.ipynb
+++ b/NN from scratch.ipynb
@@ -6,14 +6,14 @@
    "source": [
     "# Nerual Network From Scratch \n",
     "---\n",
-    "## The goal is to create a neural network using using only the NumPy and Pandas libraies which identifies handwritten numbers.\n",
+    "## The goal is to create a neural network which identifies handwritten numbers using using only the NumPy and Pandas libraies.\n",
     "\n",
-    "##### The dataset here is the well known MNIST handwritten digit dataset, commonly used for ML and computer vision projects. The data files contain gray-scale images of hand-drawn digits, from zero through nine. Each image is 28 pixels in height and 28 pixels in width, for a total of 784 pixels in total. Each pixel has a single pixel-value associated with it, indicating the lightness or darkness of that pixel, with higher numbers meaning darker. This pixel-value is an integer between 0 and 255, inclusive. [Data Source](https://www.kaggle.com/competitions/digit-recognizer/data)"
+    "The dataset here is the well known MNIST handwritten digit dataset, commonly used for ML and computer vision projects. The data files contain gray-scale images of hand-drawn digits, from zero through nine. Each image is 28 pixels in height and 28 pixels in width, for a total of 784 pixels in total. Each pixel has a single pixel-value associated with it, indicating the lightness or darkness of that pixel, with higher numbers meaning darker. This pixel-value is an integer between 0 and 255, inclusive. [Data Source](https://www.kaggle.com/competitions/digit-recognizer/data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +36,15 @@
     "##### First I will import the data using pandas. As you can see, each row corressponds to an example and each column to  a pixel value. Transpose the data such that the columns of the dataset represent examples and the rows represent the pixel data. This step is not necessary but I think it helps visualize each pixel going into one node.\n",
     "\n",
     "##### Next, I will create the training data, which I’ll feed the NN to train it, and then a development dataset which I’ll use later to ensure the NN isn’t overfitted to just the training data. These will be the X_train and X_dev respectively. The Y_train and Y_dev will be the same but only correspond to the labels of each example."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import"
    ]
   },
   {
