--- a/NN-from-scratch.ipynb
+++ b/NN-from-scratch.ipynb
@@ -1398,7 +1398,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# IT LEARNED!!"
+    "#### It learned! let's see if we can adjust some parameters to improve its accuracy"
    ]
   },
   {
@@ -1523,7 +1523,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# IT LEARNED BETTER!!!!"
+    "# Adjusting the learning rate and epochs resulted in a better prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Let's visualize the differences"
    ]
   },
   {
@@ -1547,13 +1554,6 @@
     "    image = image.reshape((28, 28)) * 255\n",
     "    plt.imshow(image, interpolation='nearest')\n",
     "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Plot the differences"
    ]
   },
   {
