--- a/NN-from-scratch.ipynb
+++ b/NN-from-scratch.ipynb
@@ -1289,6 +1289,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That's it. Now lets just run the network"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
@@ -1398,7 +1405,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### It learned! let's see if we can adjust some parameters to improve its accuracy"
+    "It learned! let's see if we can adjust some parameters to improve its accuracy"
    ]
   },
   {
@@ -1523,14 +1530,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Adjusting the learning rate and epochs resulted in a better prediction"
+    "## Adjusting the learning rate and epochs resulted in a better prediction"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Let's visualize the differences"
+    "#### Let's visualize the differences"
    ]
   },
   {
