--- a/NN-from-scratch.ipynb
+++ b/NN-from-scratch.ipynb
@@ -1179,7 +1179,7 @@
     "- ReLU is a pretty simple function it takes in an input $x$ and returns $x$ if $x>0$ and returns $0$ if $x<0$\n",
     "<h3 align=\"center\">ReLU Example</h3>\n",
     "<p align=\"center\">\n",
-    "    <img src=\"img\\ReLU.png\" alt=\"ReLU\" width=\"300\" />\n",
+    "    <img src=\"img\\\\ReLU.png\" alt=\"ReLU\" width=\"300\" />\n",
     "</p>"
    ]
   },
